[gd_scene load_steps=19 format=3 uid="uid://cvjmminf2yfon"]

[ext_resource type="Script" uid="uid://casg4qwba6q88" path="res://Charlie/UI/Main_Menu_Script.gd" id="1_lgnsp"]
[ext_resource type="Texture2D" uid="uid://bhtvgdgw2w1fd" path="res://Charlie/Textures/Chip_Logo.png" id="2_k8rte"]
[ext_resource type="Texture2D" uid="uid://df6vqhku6e0tc" path="res://Patrick/Placeholder_Files/Placeholder_Earth.png" id="2_xirei"]
[ext_resource type="PackedScene" uid="uid://b6hnwyuweh4nf" path="res://Charlie/UI/settings.tscn" id="4_xirei"]
[ext_resource type="FontFile" uid="uid://gsgju0cbsjmq" path="res://Charlie/Fonts/impact/impact.ttf" id="5_ve0bo"]
[ext_resource type="VideoStream" uid="uid://dn8e6r6su8gco" path="res://Patrick/Cutscenes/DEMO_Intro.ogv" id="6_dmeyk"]
[ext_resource type="AudioStream" uid="uid://xrm3f7mt33o6" path="res://Charlie/Music/Dunsandler_Titile_GameVer.wav" id="6_ve0bo"]

[sub_resource type="Animation" id="Animation_xtcex"]
resource_name = "Options_Close"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Buttons/Exit:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-248, -138), Vector2(257, -138)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Buttons/Options:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-248, -261), Vector2(191, -261)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Buttons/Play:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-248, -386), Vector2(84, -386)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Buttons/TextureRect:scale")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Options/Back:position")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1379, 211), Vector2(1926, 211)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Options/Options_Box:position")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(957, 518.5), Vector2(957, 1463)]
}

[sub_resource type="Animation" id="Animation_i5rp4"]
resource_name = "Options_Open"
length = 1.5
capture_included = true
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Buttons/Exit:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(257, -138), Vector2(-248, -138)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Buttons/Options:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(191, -261), Vector2(-248, -261)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Buttons/Play:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(84, -386), Vector2(-248, -386)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Buttons/TextureRect:scale")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1e-05, 1e-05)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Options/Back:position")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1926, 211), Vector2(1373, 211)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Options/Options_Box:position")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 2,
"values": [Vector2(957, 1463), Vector2(957, 518.5)]
}

[sub_resource type="Animation" id="Animation_b6ttj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect/Sun:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Play_Nodes/Fade:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Play_Nodes/Fade:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Play_Nodes/Intro_Scene:paused")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Main_Menu_Music:volume_db")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Main_Menu_Music:playing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Play_Nodes/Label:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Play_Nodes/Intro_Scene:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_mn04e"]
resource_name = "Startup_Animation"
length = 7.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(4.63333, 7.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect/Sun:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333, 0.733333, 4.46667, 5.73333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Buttons/Play:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(5.8, 7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-248, -386), Vector2(84, -386)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Buttons/Exit:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(5.8, 7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-248, -138), Vector2(257, -138)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Buttons/Options:position")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(5.8, 7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-248, -261), Vector2(191, -261)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Buttons/TextureRect:scale")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(5.8, 6.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_ve0bo"]
resource_name = "play"
length = 28.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Play_Nodes/Fade:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Play_Nodes/Fade:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333, 2.43333),
"transitions": PackedFloat32Array(2.21914, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(0, 0, 0, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Play_Nodes/Intro_Scene:paused")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2.46667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Play_Nodes/Intro_Scene:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.36667, 2.5, 22.7, 25.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Main_Menu_Music:volume_db")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.0333333, 4.43333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -80.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Main_Menu_Music:playing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(4.33333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Play_Nodes/Label:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.333333, 24.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e3eqo"]
_data = {
&"Options_Close": SubResource("Animation_xtcex"),
&"Options_Open": SubResource("Animation_i5rp4"),
&"RESET": SubResource("Animation_b6ttj"),
&"Startup_Animation": SubResource("Animation_mn04e"),
&"play": SubResource("Animation_ve0bo")
}

[sub_resource type="Theme" id="Theme_b67lw"]
default_font_size = 70

[sub_resource type="Gradient" id="Gradient_wu41k"]
offsets = PackedFloat32Array(0.09, 0.39, 0.72)
colors = PackedColorArray(0, 0, 0, 1, 0.31802, 0.31802, 0.31802, 0.941176, 0.890196, 0.890196, 0.890196, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_8g7j4"]
gradient = SubResource("Gradient_wu41k")
fill = 1
fill_from = Vector2(0, 1)

[sub_resource type="Gradient" id="Gradient_6gigt"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_vfdip"]
gradient = SubResource("Gradient_6gigt")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0
script = ExtResource("1_lgnsp")

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="Control"]
position = Vector2(22.2222, 17)
scale = Vector2(0.666667, 0.666667)
texture = ExtResource("2_xirei")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_e3eqo")
}

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -957.5
offset_top = -538.0
offset_right = 957.5
offset_bottom = 538.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="Sun" type="Sprite2D" parent="ColorRect"]
position = Vector2(960, 467)
scale = Vector2(0.51278, 0.52766)
texture = ExtResource("2_k8rte")

[node name="TextEdit" type="TextEdit" parent="ColorRect/Sun"]
offset_left = -454.0
offset_top = 144.411
offset_right = 433.0
offset_bottom = 260.411
theme = SubResource("Theme_b67lw")
text = "Created by Chicken Chips"
minimap_width = 150

[node name="Options" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -957.0
offset_top = -538.5
offset_right = 957.0
offset_bottom = 538.5
grow_horizontal = 2
grow_vertical = 2

[node name="Options_Box" parent="Options" instance=ExtResource("4_xirei")]
layout_mode = 1
offset_top = 924.5
offset_bottom = 964.5

[node name="Back" type="Button" parent="Options"]
layout_mode = 0
offset_left = 1926.0
offset_top = 211.0
offset_right = 2149.0
offset_bottom = 285.0
text = "Back"

[node name="Buttons" type="Control" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
grow_vertical = 0

[node name="TextureRect" type="TextureRect" parent="Buttons"]
layout_mode = 0
offset_top = -429.0
offset_right = 538.0
pivot_offset = Vector2(0, 429)
texture = SubResource("GradientTexture2D_8g7j4")

[node name="Play" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 84.0
offset_top = -386.0
offset_right = 307.0
offset_bottom = -312.0
text = "Play"

[node name="Options" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 191.0
offset_top = -261.0
offset_right = 414.0
offset_bottom = -187.0
text = "Options"

[node name="Exit" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 257.0
offset_top = -138.0
offset_right = 480.0
offset_bottom = -64.0
text = "Exit"

[node name="Play_Nodes" type="Control" parent="."]
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0
mouse_filter = 2

[node name="Fade" type="Sprite2D" parent="Play_Nodes"]
visible = false
position = Vector2(636, 363)
scale = Vector2(20.875, 12.3438)
texture = SubResource("GradientTexture2D_vfdip")

[node name="Label" type="Label" parent="Play_Nodes"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -113.5
offset_top = -37.0
offset_right = 113.5
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_ve0bo")
theme_override_font_sizes/font_size = 60
text = "Loading..."

[node name="Intro_Scene" type="VideoStreamPlayer" parent="Play_Nodes"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -360.0
offset_right = 1280.0
offset_bottom = 720.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.667, 0.667)
mouse_filter = 2
stream = ExtResource("6_dmeyk")
volume_db = 9.45
autoplay = true
paused = true

[node name="Main_Menu_Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_ve0bo")
autoplay = true

[connection signal="pressed" from="Options/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Buttons/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Buttons/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Buttons/Exit" to="." method="_on_exit_pressed"]
